syntax = "proto3";

package losttomb;

message TGroup {
  int32 GroupId = 1;
  int32 Level = 2;
}

message TLostTombActivateArg {
  int32 GroupId = 1;
}

message TLostTombFightRet {
  bool IsWin = 1;
}

message TLostTombMainResponse {
  repeated TGroup Activation = 1;
  int32 FightTimes = 2;
  int32 FightStage = 3;
  int32 RefreshTimes = 4;
  int32 FreeRefreshTimes = 5;
}

message TLostTombRank {
  message UserInfo = 1;
  int32 Place = 2;
  int32 Value = 3;
}

message TLostTombRankRet {
  repeated TLostTombRank Rank = 1;
  int32 SelfPlace = 2;
}

